--- a/CSS/Css/style.css
+++ b/CSS/Css/style.css
@@ -1,62 +1,41 @@
 /* wrap line => alt + z */
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-/* styles for paragraph */
 
 body {
-    font-size: 2rem;
+    font-size: 1.4rem;
     font-family: "Roboto", sans-serif;
 }
 
-/* ul, p or main is block-level element and has 100% full width of parent element/container  and some margin */
-
-/* block => stack on top of each other and create a new line and takes full width of page/parent element if not limiting by some parent element
-inline => takes the width of the content
-inline-block => gets the hybrid like we can keep the content inline */
-
-p {
-    /* block types */
-    background-color: lightgray;
+.block{
+    width: 30vw;
+    height: 30vw;
+    background-color: #000;
+    color:white;
+    padding: 1rem;
 }
 
-.opposite{
-    /* inline types */
-    /* background-color: #333;
-    color: whitesmoke; */
-
-    /* inline-block types */
-    display: inline-block;
-    background-color: #333;
-    color: whitesmoke;
-    margin-top: 100px;
-    height: 200px;
-    padding: 4rem;
+.left{
+    float: left;
+    margin-right: 1rem;
+}
+.right{
+    float: right;
+    margin-left: 1rem;
 }
 
-
-/* styles for nav */
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+ /* old way for pushing 2nd para out of container */
+.clear{
+    clear: both;
 }
 
+section{
+    background-color: bisque;
+    border: 1px solid #333;
+    padding: 1rem;
+    /* making the section container all the way down and contain the full element containg the element inside but its legecy */
+    /* overflow: auto; */
 
-ul{
-    text-align: right;
-    list-style-type: none;
-    background-color: rgb(11, 31, 31);
-}
-
-li {
-    display: inline-block;
-    padding:5px;
-    /* to create left right margin */
-    margin-inline: 0.5rem;
-}
-
-li a{
-    text-decoration: none;
-    color: aliceblue;
+    /* new way as per mdn */
+    display: flow-root;
 }
