--- a/CSS - Maxi/main.css
+++ b/CSS - Maxi/main.css
@@ -14,12 +14,12 @@ body {
 
 
 #product-overview {
-    background: #ff1b68;
+    background: url('freedom.jpg');
+    /* background: #ff1b68; */
     width: 100%;
     height: 528px;
     padding: 5px;
-    border: 5px solid black;
-    margin: 10px;
+  
  
 }
 
@@ -35,3 +35,66 @@ body {
 /* h1 {
     font-family: sans-serif;
 } */
+
+.main-header{
+    width: 100%;
+    background: #2ddf5c;
+    padding: 8px 16px;
+}
+
+.main-header__host {
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+    color: #0e4f1f;
+}
+
+.main-header > div {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.main-nav{
+    display: inline-block;
+     text-align: right;
+     width: calc(100% - 60px);
+     vertical-align: middle;
+}
+
+.main-nav__items{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.main-nav__item {
+    display: inline-block;
+    margin: 0 15px;
+}
+
+.main-nav__item a {
+    text-decoration: none;
+    color: #0e4f1f;
+    font-weight: bold;
+}
+ 
+/* below are example of pseudo classes */
+.main-nav__item a:hover,
+.main-nav__item a:active{
+    color: white;
+    border-bottom: 5px solid white;
+}
+
+.main-nav__item--cta a{
+    color: white;
+    background: #ff1b68;
+    padding: 8px 16px;
+    border-radius: 8px;
+}
+
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active{
+    color: #ff1b68;
+    background: white;
+    border: none;
+}
