--- a/CSS - Maxi/main.css
+++ b/CSS - Maxi/main.css
@@ -19,8 +19,16 @@ body {
     width: 100%;
     height: 528px;
     padding: 5px;
-  
- 
+}
+
+.plan {
+    display: inline-block;
+    padding: 16px;
+    margin: 8px;
+    background: #d5ffdc;
+    width: 30%;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .section-title {
