--- a/CSS - Maxi/main.css
+++ b/CSS - Maxi/main.css
@@ -1,9 +1,18 @@
+* {
+   /* default is box-sizing: content-box; */
+    /* border-box includes padding & border 
+    put it in universal selector because inheritance wont take place (in body) because browser sets its own box-sizing
+    because section is a block level element 
+    */
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
 }
 
-
+ 
 #product-overview {
     background: url('freedom.jpg');
     /* background: #ff1b68; */
@@ -31,33 +40,65 @@ body {
     font-family: 'Anton', sans-serif;
 }
 
-h1 {
-    font-family: sans-serif;
+.main-header{
+    width: 100%;
+    background: #2ddf5c;
+    padding: 8px 16px;
 }
 
-nav {
-    margin-bottom: 16px;
-    background: #fa923f;
-    padding: 8px 0;
-    
-}
-
-a {
+.main-header__host {
+    font-weight: bold;
+    font-size: 22px;
     text-decoration: none;
+    color: #0e4f1f;
+}
+
+.main-header > div {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.main-nav{
+    display: inline-block;
+     text-align: right;
+     width: calc(100% - 60px);
+     vertical-align: middle;
+}
+
+.main-nav__items{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.main-nav__item {
+    display: inline-block;
+    margin: 0 15px;
+}
+
+.main-nav__item a {
+    text-decoration: none;
+    color: #0e4f1f;
+    font-weight: bold;
+}
+ 
+/* below are example of pseudo classes */
+.main-nav__item a:hover,
+.main-nav__item a:active{
     color: white;
-    margin: 10px;
+    border-bottom: 5px solid white;
 }
 
-a.active {
-    color: #521751;
+.main-nav__item--cta a{
+    color: white;
+    background: #ff1b68;
+    padding: 8px 16px;
+    border-radius: 8px;
 }
 
-.main-section {
-    height: 800px;
-    border: 1px solid #ccc;
-    padding: 16px;
-}
-
-.highlighted {
-    border: 2px solid #fa923f;
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active{
+    color: #ff1b68;
+    background: white;
+    border: none;
 }
